apps/simple-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-api
  labels:
    app: simple-api
