apps/simple-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api
  namespace: simple-api
  labels:
    app: simple-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      containers:
      - name: dummyjson
        image: simple-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 65532
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
        livenessProbe:
          httpGet:
            path: /test
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /test
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
